--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <!--CHAMADA FINAL-->
 
-    <section class="banner">
+    <section class="banner_final">
         <h2 class="banner__titulo2">Nos desafie!</h2>
         <p class="banner__subtitulo">Queremos trabalhar na criação de algo realmente único para você e sua empresa.</p>
         <button class="botao__projeto" onclick="pressButton()" onclick="">
