sem fechar a HOME , inicio pg Studio Process

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#" class="lista__menu-link">
+                    <a href="studiopez_trabalho.html" class="lista__menu-link">
                         Como trabalhamos
                     </a>
                 </li>
