remocao do whats e criacao do arq studio_process

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="carousel.css">
     <link rel="stylesheet" href="card_sanfona.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="studio_process.css">
 
 
 </head>
