--- a/studiopez_trabalho.html
+++ b/studiopez_trabalho.html
@@ -74,15 +74,20 @@
         seguir as etapas do nosso método de trabalho, passo a passo:
     </h2>
 
-    <div class="container_whats">
+    <div class="container_whats_arrow">
         <div class="whats">
-            <a href="">
+            <!--<a href="#">
                 <img class="ico_whats" src="img/seta_vamosconversar.svg"
                     alt="imagem que ao clicar redireciona para uma conversa no aplicativo WhatsApp">
-            </a>
+            </a>-->
+            <div class="arrow">
+                <img src="img/seta_continue.svg" alt="imagem que indica que a página continua para baixo">
+            </div>
         </div>
     </div>
 </section>
+
+
 
 
 <!--CARDS-->
