pg st.prcss com os cards ok

--- a/studiopez_trabalho.html
+++ b/studiopez_trabalho.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="carousel.css">
     <link rel="stylesheet" href="card_sanfona.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="studio_process.css">
 
 
 </head>
@@ -91,23 +92,49 @@
 
 
 <!--CARDS-->
-<section class="cards">
+<div class="studio_process-briefing">
+    <div class="cards-briefing">
+        <img class="cards_img" src="/img/ideia.svg" alt="simbolo de tendo uma ideia" width="49px" height="55px">
 
-    <img class="logo_rodape" src="#" alt="#" width="#" height="#">
+        <h2 class="cards_titulo">Briefing e<br> Estratégia</h2>
 
+        <p>Coleta de informações com o cliente e elaboração do plano de ação.</p>
+    </div>
+</div>
 
+<div class="studio_process-wireframe">
+    <div class="cards-wireframe">
+        <img class="cards_img" src="/img/wireframe.svg" alt="simbolo de tendo uma ideia" width="49px" height="55px">
 
+        <h2 class="cards_titulo">Wireframe <br>
+            e Layout</h2>
 
-    <!--
-    <p>Rua Alagoas, 792 - Londrina - PR - Brasil.
-        43 | 3344 - 6315
-    </p>
-    <a href="">contato@studiopez.com.br</a>-->
+        <p>Estruturação do site, foco no webdesign, UX/UI.</p>
+    </div>
+</div>
 
-    <p># </p>
+<div class="studio_process-programacao">
+    <div class="cards-programacao">
+        <img class="cards_img" src="/img/programacao.svg" alt="simbolo de tendo uma ideia" width="49px" height="55px">
 
+        <h2 class="cards_titulo">Wireframe <br>
+            e Layout</h2>
 
-</section>
+        <p>Codificação do site, Front-End e Back-End.</p>
+    </div>
+</div>
+
+<div class="studio_process-entrega">
+    <div class="cards-entrega">
+        <img class="cards_img" src="/img/testes_entrega.svg" alt="simbolo de tendo uma ideia" width="49px"
+            height="55px">
+
+        <h2 class="cards_titulo">Testes e <br>
+            Entrega</h2>
+
+        <p>Checagem geral das funcionalidades do site. E a entrega do projeto.</p>
+    </div>
+</div>
 
 
 <!--CHAMADA FINAL-->
