pg std process 90%

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="studiopez_trabalho.html" class="lista__menu-link">
+                    <a href="studio_process.html" class="lista__menu-link">
                         Como trabalhamos
                     </a>
                 </li>
