--- a/studio_process.html
+++ b/studio_process.html
@@ -43,7 +43,7 @@
                 </a>
             </li>
             <li class="lista-menu__item">
-                <a href="studiopez_trabalho.html" class="lista__menu-link">
+                <a href="studio_process.html" class="lista__menu-link">
                     Como trabalhamos
                 </a>
             </li>
@@ -139,10 +139,10 @@
 
 <!--CHAMADA FINAL-->
 
-<section class="banner_final">
-    <h2 class="banner__titulo2">Cada projeto é uma experiência singular, clara e objetiva desde o
+<section class="banner_final-stdprocess">
+    <h2 class="banner__titulo2-stdprocess">Cada projeto é uma experiência singular e objetiva desde o
         início até a entrega final.</h2>
-    <!--<p class="banner__subtitulo">Queremos trabalhar na criação de algo realmente único para você e sua empresa.</p>-->
+    <!--<p class="banner__subtitulo">Estamos aqui para resolver seus problemas!</p>-->
     <button class="botao__projeto" onclick="pressButton()" onclick="">
         <a class="botao__projeto-link" href="">Comece seu projeto!</a>
     </button>
