criacao da pg contato

--- a/studio_process.html
+++ b/studio_process.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="card_sanfona.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="studio_process.css">
+    <link rel="stylesheet" href="contato.css">
 
 
 </head>
@@ -48,7 +49,7 @@
                 </a>
             </li>
             <li class="lista-menu__item">
-                <a href="#" class="lista__menu-link">
+                <a href="contato.html" class="lista__menu-link">
                     Contato
                 </a>
             </li>
