--- a/contato.html
+++ b/contato.html
@@ -76,27 +76,14 @@
     </button>
 
     <h2 class="banner__subtitulo-contato">
-        Prefere mandar mensagem via WhatsApp?
+        Prefere mandar mensagem via WhatsApp? <br>43 | 3344 - 6315
     </h2>
 
     <button class="botao__projeto" onclick="pressButton()" onclick="">
         <a class="botao__projeto-link" href="">WhatsApp</a>
     </button>
 
-    <h2 class="banner__subtitulo-contato">43 | 3344 - 6315
-    </h2>
-
-
 </section>
-
-
-
-
-
-
-
-
-
 
 <!--FOOTER-->
 
