ipad v2 - btn contato ok

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="banner">
         <h1 class="banner__titulo">Transformamos ideias no melhor site para seu negócio.</h1>
         <button class="botao__projeto" onclick="pressButton()" onclick="">
-            <a class="botao__projeto-link" href="">Comece seu projeto!</a>
+            <a class="botao__projeto-link" href="contato.html">Comece seu projeto!</a>
         </button>
         <div class="container_arrow_e_whats">
             <!-- <div class="arrow"><img src="img/seta_continue.svg"
@@ -79,8 +79,10 @@
 
     <!--BANNER EMPRESA-->
     <section class="banner_empresa">
-        <img class="logo_horizontal" src="img/logo_horizontal.svg" alt="logo do Studio Pez na horizontal" width="300px"
-            height="71px">
+        <div class="logo_horizontal">
+            <img class="" src="img/logo_horizontal.svg" alt="logo do Studio Pez na horizontal" width="300px"
+                height="71px">
+        </div>
         <div class="carousel">
             <ul id="carousel-list">
                 <li>Olá!</li>
@@ -170,7 +172,7 @@
         <h2 class="banner__titulo2">Nos desafie!</h2>
         <p class="banner__subtitulo">Queremos trabalhar na criação de algo realmente único para você e sua empresa.</p>
         <button class="botao__projeto" onclick="pressButton()" onclick="">
-            <a class="botao__projeto-link" href="">Comece seu projeto!</a>
+            <a class="botao__projeto-link" href="contato.html">Comece seu projeto!</a>
         </button>
     </section>
 
