ipad v3 - tamnh btns e imgs

--- a/studio_process.html
+++ b/studio_process.html
@@ -68,7 +68,7 @@
     </h2>
 
     <button class="botao__projeto" onclick="pressButton()" onclick="">
-        <a class="botao__projeto-link" href="">Comece seu projeto!</a>
+        <a class="botao__projeto-link" href="contato.html">Comece seu projeto!</a>
     </button>
 
     <h2 class="banner__subtitulo-studiotb">
@@ -145,7 +145,7 @@
         início até a entrega final.</h2>
     <!--<p class="banner__subtitulo">Estamos aqui para resolver seus problemas!</p>-->
     <button class="botao__projeto" onclick="pressButton()" onclick="">
-        <a class="botao__projeto-link" href="">Comece seu projeto!</a>
+        <a class="botao__projeto-link" href="contato.html">Comece seu projeto!</a>
     </button>
 </section>
 
