ipad v4 - ajsts em font sz

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                     <li class="card-content-item">Teste e otimize seu site</li>
                     <li class="card-content-item">Publique seu site</li>
                     <br>
-                    <p>Estes passos podem ser explicados detalhadamente por nossa equipe! Instruindo e desenvolvendo
+                    <p class="card-content-item">Estes passos podem ser explicados detalhadamente por nossa equipe!
+                        Instruindo e desenvolvendo
                         todas
                         as etapas junto com você!</p>
                 </ul>
@@ -176,22 +177,7 @@
         </button>
     </section>
 
-    <!-- <section class="banner_incial">
-        <h1 class="banner__titulo">Transformamos ideias no melhor site para seu negócio.</h1>
-        <button class="botao__projeto" onclick="pressButton()" onclick="">
-            <a class="botao__projeto-link" href="">Comece seu projeto!</a>
-        </button>
-        <div class="container_arrow_e_whats">
-            <div class="arrow"><img src="img/seta_continue.svg"
-                    alt="imagem que indica que a página continua para baixo">
-            </div>
-            <div class="whats">
-                <a href="">
-                    <img class="ico_whats" src="img/seta_vamosconversar.svg"
-                        alt="imagem que ao clicar redireciona para uma conversa no aplicativo WhatsApp">
-                </a>
-            </div>
-        </div>-->
+
 
     <!--FOOTER-->
 
