ipad v5 - pg contt ok

--- a/contato.html
+++ b/contato.html
@@ -65,10 +65,7 @@
 <section class="banner-contato">
     <h1 class="banner__titulo-contato">Vamos conversar!</h1>
     <h2 class="banner__subtitulo-contato">Duvidas sobre nossos serviços?
-        Ou qualquer outro assunto…
-    </h2>
-
-    <h2 class="banner__subtitulo-contato">contato@studiopez.com.br
+        Ou qualquer outro assunto… <br>contato@studiopez.com.br
     </h2>
 
     <button class="botao__projeto" onclick="pressButton()" onclick="">
