ipad v6 - ajsts de tmnh e fnt sz

--- a/studio_process.html
+++ b/studio_process.html
@@ -63,7 +63,7 @@
 
 <!--BANNER INICIAL-->
 <section class="banner-studiotb">
-    <h1 class="banner__titulo">Como o Studio <span class="verde">Pez</span> trabalha.</h1>
+    <h1 class="banner__titulo-studio">Como o Studio <span class="verde">Pez</span> trabalha.</h1>
     <h2 class="banner__subtitulo-studiotb"> Nosso processo é muito flexível, de acordo com suas necessidades.
     </h2>
 
@@ -78,28 +78,22 @@
 
     <div class="container_whats_arrow">
         <div class="whats">
-            <!--<a href="#">
-                <img class="ico_whats" src="img/seta_vamosconversar.svg"
-                    alt="imagem que ao clicar redireciona para uma conversa no aplicativo WhatsApp">
-            </a>-->
+
             <div class="arrow">
-                <img src="img/seta_continue.svg" alt="imagem que indica que a página continua para baixo">
+                <img class="continue" src="img/seta_continue.svg"
+                    alt="imagem que indica que a página continua para baixo">
             </div>
         </div>
     </div>
 </section>
-
-
-
-
 <!--CARDS-->
 <div class="studio_process-briefing">
     <div class="cards-briefing">
         <img class="cards_img" src="/img/ideia.svg" alt="simbolo de tendo uma ideia" width="49px" height="55px">
 
-        <h2 class="cards_titulo">Briefing e<br> Estratégia</h2>
+        <h2 class="cards_titulo">Briefing e Estratégia</h2>
 
-        <p>Coleta de informações com o cliente e elaboração do plano de ação.</p>
+        <p class="cards_texto">Coleta de informações com o cliente e elaboração do plano de ação.</p>
     </div>
 </div>
 
@@ -107,10 +101,10 @@
     <div class="cards-wireframe">
         <img class="cards_img" src="/img/wireframe.svg" alt="simbolo de tendo uma ideia" width="49px" height="55px">
 
-        <h2 class="cards_titulo">Wireframe <br>
+        <h2 class="cards_titulo">Wireframe
             e Layout</h2>
 
-        <p>Estruturação do site, foco no webdesign, UX/UI.</p>
+        <p class="cards_texto">Estruturação do site, foco no webdesign, UX/UI.</p>
     </div>
 </div>
 
@@ -118,10 +112,9 @@
     <div class="cards-programacao">
         <img class="cards_img" src="/img/programacao.svg" alt="simbolo de tendo uma ideia" width="49px" height="55px">
 
-        <h2 class="cards_titulo">Wireframe <br>
-            e Layout</h2>
+        <h2 class="cards_titulo">Processo de Programação</h2>
 
-        <p>Codificação do site, Front-End e Back-End.</p>
+        <p class="cards_texto">Codificação do site, Front-End e Back-End.</p>
     </div>
 </div>
 
@@ -130,10 +123,10 @@
         <img class="cards_img" src="/img/testes_entrega.svg" alt="simbolo de tendo uma ideia" width="49px"
             height="55px">
 
-        <h2 class="cards_titulo">Testes e <br>
+        <h2 class="cards_titulo">Testes e
             Entrega</h2>
 
-        <p>Checagem geral das funcionalidades do site. E a entrega do projeto.</p>
+        <p class="cards_texto">Checagem geral das funcionalidades do site. E a entrega do projeto.</p>
     </div>
 </div>
 
