--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Studio Pez</title>
+    <meta name="viewport" content="width=device-width">
+    <title>Studio Pez 2023</title>
     <!-- Folhas de CSS -->
-    <link rel="stylesheet" href="reset.css">
+    <link rel=" stylesheet" href="reset.css">
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="header.css">
@@ -82,6 +82,9 @@
         <div class="logo_horizontal">
             <img class="" src="img/logo_horizontal.svg" alt="logo do Studio Pez na horizontal" width="300px"
                 height="71px">
+
+            <!--CAROUSEL-->
+
         </div>
         <div class="carousel">
             <ul id="carousel-list">
@@ -125,19 +128,22 @@
     <!--SERVICOS-->
 
     <section class="servicos">
-        <h2 class="servico_titulo">Já que você está aqui, queremos responder duas perguntas que podem estar rodeano sua
+        <h2 class="servico_titulo">Já que você está aqui, queremos responder duas perguntas que podem estar rodeando sua
             cabeça:</h2>
+
+        <!--CARD SANFONA-->
+
         <div>
             <div class="card" id="myCard">
-                <button class="card_btn" onclick="toggleCard()">Por que ter um site?<img src="/img/sinal_mais.svg"
-                        alt=""></button>
+                <button class="card_btn" onclick="toggleCard()">Por que ter um site?<img class="exp_btn"
+                        src="/img/sinal_mais.svg" alt=""></button>
 
                 <ul class="card-content">
-                    <li class="card-content-item">Credibilidade e profissionalismo</li>
-                    <li class="card-content-item">Informações sobre produtos e serviços</li>
+                    <li class="card-content-item">Credibilidade e Profissionalismo</li>
+                    <li class="card-content-item">Informações sobre Produtos e Serviços</li>
                     <li class="card-content-item">Acesso 24 horas por dia</li>
-                    <li class="card-content-item">Marketing e promoção</li>
-                    <li class="card-content-item">Atendimento ao cliente</li>
+                    <li class="card-content-item">Marketing e Promoção</li>
+                    <li class="card-content-item">Atendimento ao Cliente</li>
                     <br>
                     <p class="card-content-item">Estes são apenas alguns pontos sobre a importância de se ter um site.
                     </p>
@@ -145,8 +151,8 @@
             </div>
 
             <div class="card2" id="myCard2">
-                <button class="card_btn" onclick="toggleCard2()">Por onde começar?<br><img src="/img/sinal_mais.svg"
-                        alt=""></button>
+                <button class="card_btn" onclick="toggleCard2()">Por onde começar?<br><img class="exp_btn"
+                        src="/img/sinal_mais.svg" alt=""></button>
                 <ul class="card-content2">
                     <li class="card-content-item"> Defina seus objetivos</li>
                     <li class="card-content-item">Registre um domínio</li>
